2013-09-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* omp/CMakeLists.txt: Do not apply hardening flags when using MINGW.
	Patch suggested by Andre Heinecke.

2013-09-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/CMakeLists.txt: Do not apply hardening flags when using MINGW.
	Patch suggested by Andre Heinecke.

2013-09-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/openvas_hosts.c, base/pidfile.c, misc/openvas_auth.c: Revert
	patches accidentally included in last commit.

2013-09-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt: Add missing files to MINGW section.

2013-09-26  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0+beta3.

2013-09-26  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Preparing the openvas-libraries 7.0+beta2 release.

	* CHANGES: Updated.

2013-09-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_set_dep): Remove handling of dependencies with
	.nes extension case as they were fully converted.

2013-09-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_hosts.c (openvas_hosts_resolve): New function.
	(openvas_hosts_exclude): Add boolean to choose whether to resolve
	excluded hostnames before filtering them out. Call new function
	adequately.

	* base/openvas_hosts.h: Add and modify function prototypes.

2013-09-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Add support for IPv6 short range-expressed networks.

	* base/openvas_hosts.c (is_long_range_network, long_range_network_ips):
	Fix comments and coding style.
	(is_short_range6_network, short_range6_network_ips): New functions.
	(determine_host_type, openvas_hosts_new): Handle short IPv6 range case.

	* base/openvas_hosts.h (host_type): Add HOST_TYPE_RANGE6_SHORT value.

2013-09-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Add support for IPv6 long range-expressed networks.
